autotests/syntax-tests/tests/negative/negative126.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name $EENUM Name Name : = ; = ; } ; 